# pmf-mo-materijali

./: README.md
Matematički softver/esej latex/: literatura.bib  main.tex
Matematički softver/esej python/: ESEJ.ipynb
Matematički softver/kolokvij latex/beamer/: main.tex
Matematički softver/kolokvij latex/pdf/: main.tex
Mreže računala/dz1/: gibanica.html  index.html  juha1.html  juha2.html  pastir.html  piletina.html  style.css  tijestosir.html  wok.html
Mreže računala/dz2/: client  client.c  protocol.c  protocol.h  server  server.c
Primjena paralelnih računala/CUDA/: CMakeLists.txt  add-mat.cu  add-vec.cu  capability.cu  mul-mat.cu  reduction.cu
Primjena paralelnih računala/Cpp/: CMakeLists.txt  account.cpp  account.h  account_main.cpp  accum.cpp  async.cpp  compare_exchange.cpp  future.cpp  future1.cpp  future_ali_async.cpp  hello.cpp  packaged_task.cpp  sinhro.cpp  stack.cpp  stack.h  test.cpp  tsqueue.cpp
Primjena paralelnih računala/OpenMP/: CMakeLists.txt  a.out  dot.cpp  hello_world.cpp  histogram.cpp  histogram_critical.cpp  list.cpp  mat_vec.cpp  mc.cpp  pi.cpp  quicksort.cpp  race.cpp  race_atomic.cpp  sum.cpp  task_intro.cpp  tokenizer.cpp
Primjena paralelnih računala/cuda-1-mirnana/: CMakeLists.txt  README.md  axpy.cu
Primjena paralelnih računala/cuda-2-mirnana/: CMakeLists.txt  README.md  REZULTATI.txt  main.cu
Primjena paralelnih računala/merge-mirnana/: CMakeLists.txt  README.md  REZULTATI.txt  main.cpp
Primjena paralelnih računala/nbody-mirnana/: CMakeLists.txt  README.md  REZULTATI.txt  main.cpp  nbody.cpp  nbody.h  nbody.input
Primjena paralelnih računala/queue-fg-mirnana/: CMakeLists.txt  README.md  main.cpp  tests.cpp  tsqueue-fine-graded.h
Primjena paralelnih računala/ts_map-mirnana/: CMakeLists.txt  README.md  ts_map.h  ts_map_main.cpp
Programiranje za suvremene procesore/Bitcoin Course/: Program_English
Programiranje za suvremene procesore/Bitcoin Course/Week10/: Script.pptx  txWithP2SH.py
Računarski praktikum 2/: readme.md
Računarski praktikum 2/dz1/: wordle.php  wordle_igra.php  wordle_kraj.php
Računarski praktikum 2/kolokvij/zadatak1/: zadatak1.php  zadatak1_pocetak.php
Računarski praktikum 2/kolokvij/zadatak2/: zadatak2.html  zadatak2.php
Računarski praktikum 2/rbr10/: 03 - Canvas - Kochova pahulja.html  04 - Canvas - Sat.html  canvas_pisanje.html  todo_list.html  workeri.html  zadatak1.html  zadatak2.html  zadatak3.html  zadatak4.html  zadatak4_worker.js
Računarski praktikum 2/rbr11/: Primjer 3 - Chat.html  db.class.php  dionice.html  dionice.php  fajlovi.html  fajlovi.js  fajlovi.php  kalkulator.html  kalkulator.php
Računarski praktikum 2/rbr2/: forma.html  index.php  zadatak1.php  zadatak1_obradi.php
Računarski praktikum 2/rbr4/: zadatak1.php  zadatak1_mirna.php  zadatak2.php  zadatak2_mirna.php  zadatak3.php  zadatak4.php  zadatak4_mirna.php
Računarski praktikum 2/rbr5/: zadatak1.php  zadatak1_mirna.php  zadatak2.php  zadatak3_class.php  zadatak3_index.php  zadatak3_index_jan.php  zadatak3_pogodi.php  zadatak3_pogodi_jan.php  zadatak4.php  zadatak4_jan.php
Računarski praktikum 2/rbr6/: zadatak1.php  zadatak1_jan.php  zadatak3.php  zadatak3_mirna.php  zadatak4.php  zadatak5_db.php  zadatak5_db_settings.php  zadatak5_jan.php
Računarski praktikum 2/rbr7/library-nas_pokusaj/: index.php
Računarski praktikum 2/rbr8/: datum.html  hijerarhija.html  prir_br.html  regex.html  substringovi.html  tablica_mnozenja.html
Računarski praktikum 2/rbr9/: datum.html  kalkulator.html  kalkulator.html.html  pr1_jquery.html  primjer1.html  primjer2.html  zad6.html  zadatak3.html
(+94 files in other folders)
